<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/dim_card_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--GENERAL-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_settings_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_default_margin"
                app:cardElevation="@dimen/dim_card_elevation"
                app:cardCornerRadius="@dimen/settings_card_corner_radius"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:foreground="@drawable/ripple"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--NOTIFICAITON-->
                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_settings_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true">
                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/icon_settings_notification"
                            android:layout_width="@dimen/dim_default_icon"
                            android:layout_height="@dimen/dim_default_icon"
                            android:layout_gravity="center_vertical"
                            app:iiv_icon="gmd-adb"
                            app:iiv_color="@color/colorIcon"
                            android:layout_marginLeft="@dimen/dim_big_margin"
                            android:layout_marginRight="@dimen/dim_big_margin"  />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dim_default_padding"
                            android:paddingRight="@dimen/dim_default_padding"
                            android:paddingBottom="@dimen/dim_small_padding">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:orientation="vertical"
                                android:layout_marginEnd="44dp">
                                <TextView
                                    android:id="@+id/txt_settings_notification_item_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/notification"
                                    android:textColor="@color/colorText"
                                    android:textSize="@dimen/dim_default_text" />
                                <TextView
                                    android:id="@+id/txt_settings_notification_item_sub"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/notification_sub"
                                    android:textColor="@color/colorSubText"
                                    android:textSize="@dimen/dim_down_default_text" />
                            </LinearLayout>
                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sw_settings_notification"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:button="@null"
                                android:hapticFeedbackEnabled="true"
                                android:layout_centerVertical="true"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>
                    </LinearLayout>
                    <!--NET PORT-->
                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_settings_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true">
                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/icon_settings_port"
                            android:layout_width="@dimen/dim_default_icon"
                            android:layout_height="@dimen/dim_default_icon"
                            android:layout_gravity="center_vertical"
                            app:iiv_icon="gmd-settings-ethernet"
                            app:iiv_color="@color/colorIcon"
                            android:layout_marginLeft="@dimen/dim_big_margin"
                            android:layout_marginRight="@dimen/dim_big_margin" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="@dimen/dim_small_padding"
                            android:paddingRight="@dimen/dim_default_padding"
                            android:paddingBottom="@dimen/dim_small_padding">
                            <TextView
                                android:id="@+id/txt_settings_port_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/port"
                                android:textColor="@color/colorText"
                                android:textSize="@dimen/dim_default_text" />
                            <TextView
                                android:id="@+id/txt_settings_port_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/port_sub"
                                android:textColor="@color/colorSubText"
                                android:textSize="@dimen/dim_down_default_text" />
                        </LinearLayout>
                    </LinearLayout>
                    <!--SHOW TIPS-->
                    <LinearLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/ll_settings_show_tips"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/ripple"
                        android:clickable="true">
                        <com.mikepenz.iconics.view.IconicsImageView
                            android:id="@+id/icon_settings_show_tips"
                            android:layout_width="@dimen/dim_default_icon"
                            android:layout_height="@dimen/dim_default_icon"
                            android:layout_gravity="center_vertical"
                            app:iiv_icon="gmd-perm-device-information"
                            app:iiv_color="@color/colorIcon"
                            android:layout_marginLeft="@dimen/dim_big_margin"
                            android:layout_marginRight="@dimen/dim_big_margin"  />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingTop="@dimen/dim_small_padding"
                            android:paddingRight="@dimen/dim_default_padding"
                            android:paddingBottom="@dimen/dim_small_padding">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:orientation="vertical"
                                android:layout_marginEnd="44dp">
                                <TextView
                                    android:id="@+id/txt_settings_show_tips_item_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/show_tips"
                                    android:textColor="@color/colorText"
                                    android:textSize="@dimen/dim_default_text" />
                                <TextView
                                    android:id="@+id/txt_settings_show_tips_item_sub"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/show_tips_sub"
                                    android:textColor="@color/colorSubText"
                                    android:textSize="@dimen/dim_down_default_text" />
                            </LinearLayout>
                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/sw_settings_show_tips"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:button="@null"
                                android:hapticFeedbackEnabled="true"
                                android:layout_centerVertical="true"
                                android:layout_alignParentEnd="true" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>