<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/dim_card_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/about_card_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_default_margin"
                app:cardElevation="@dimen/dim_card_elevation"
                app:cardCornerRadius="@dimen/settings_card_corner_radius"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:background="@color/colorCardBackground"
                android:foreground="@drawable/ripple"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="212dp"
                        android:layout_height="212dp"
                        android:src="@drawable/ic_launcher_512"
                        android:scaleType="fitXY"
                        android:padding="@dimen/dim_default_padding"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/about_app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="AdbFi"
                        android:textSize="@dimen/dim_big_text"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:padding="@dimen/dim_small_padding"
                        />
                    <TextView
                        android:id="@+id/about_app_light_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Adb over Wi-Fi"
                        android:textColor="@color/colorSubText"
                        android:textSize="@dimen/dim_default_text"
                        android:layout_gravity="center"
                        android:padding="@dimen/dim_small_small_padding"
                        />
                    <TextView
                        android:id="@+id/about_version_item_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="v1.0"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/dim_default_text"
                        android:layout_gravity="center"
                        android:padding="@dimen/dim_small_small_padding"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--AUTOR-->
            <android.support.v7.widget.CardView
                android:id="@+id/about_card_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim_default_margin"
                app:cardElevation="@dimen/dim_card_elevation"
                app:cardCornerRadius="@dimen/settings_card_corner_radius"
                app:cardBackgroundColor="@color/colorCardBackground"
                android:foreground="@drawable/ripple"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <!--GILBERT NDRESAJ  -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:padding="@dimen/dim_big_padding"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/gilbert_ndresaj"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/dim_down_big_text"
                            android:textStyle="bold"
                            android:textColor="@color/colorText"
                            android:text="Gilbert Ndresaj"/>
                        <TextView
                            android:id="@+id/gilbert_ndresaj_role"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorActive"
                            android:textSize="@dimen/dim_default_text"
                            android:text="@string/gilbert_role"/>
                        <TextView
                            android:id="@+id/gilbert_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorSubText"
                            android:text="@string/about_author_gilbert_description"
                            android:textSize="@dimen/dim_down_default_text" />
                    </LinearLayout>

                    <!--GILBERT LINKS  -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dim_default_padding">
                        <TextView
                            android:id="@+id/about_author_gilbert_mail_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/send_email"
                            android:textSize="@dimen/dim_default_text"
                            android:textStyle="bold"
                            android:textColor="@color/colorActive"
                            android:padding="@dimen/dim_down_default_padding"
                            android:background="@drawable/ripple"
                            android:clickable="true" />
                        <TextView
                            android:id="@+id/about_author_gilbert_github_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="GITHUB"
                            android:textColor="@color/colorActive"
                            android:textSize="@dimen/dim_default_text"
                            android:padding="@dimen/dim_down_default_padding"
                            android:background="@drawable/ripple"
                            android:clickable="true" />
                    </LinearLayout>
                    <!--SPECIAL THANKS-->
                    <TextView
                        android:id="@+id/about_special_thanks_donald"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dim_default_padding"
                        android:text="@string/about_special_thanks_donald"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/dim_default_text"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>